<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_background"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_r"
        android:textStyle="italic"
        android:textSize="20dp"
        android:id="@+id/back2Login"
        />

    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_below="@+id/back2Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/shape_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/iv_sh_register"
            android:layout_gravity="center"
            android:id="@+id/ic_login"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_below="@+id/shape_1"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@color/secound_backgroud"
        android:id="@+id/shape_2"
        >
        <ImageView
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_user"
            android:id="@+id/ic_user"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ic_user"
            android:layout_toRightOf="@+id/ic_user"
            android:layout_toEndOf="@+id/ic_user"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:lines="1"
            android:hint="@string/username"
            android:id="@+id/user_name"
            />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_password_lock"
            android:layout_below="@+id/ic_user"
            android:id="@+id/ic_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userpass"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:lines="1"
            android:password="true"
            android:layout_alignTop="@+id/ic_password"
            android:layout_alignLeft="@+id/user_name"
            android:layout_alignStart="@+id/user_name"
            android:id="@+id/user_password_register" />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_password_lock"
            android:layout_below="@+id/ic_password"
            android:id="@+id/ic_re_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rePasword"
            android:maxLines="1"
            android:lines="1"
            android:id="@+id/user_RePassword"
            android:password="true"
            android:layout_marginRight="5dp"
            android:layout_alignTop="@+id/ic_re_password"
            android:layout_alignLeft="@+id/user_password_register"
            android:layout_alignStart="@+id/user_password_register" />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/phone"
            android:layout_below="@+id/ic_re_password"
            android:id="@+id/ic_phone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:maxLines="1"
            android:lines="1"
            android:id="@+id/phone_register"
            android:phoneNumber="true"
            android:layout_marginRight="5dp"
            android:layout_alignTop="@+id/ic_phone"
            android:layout_toRightOf="@+id/ic_phone"
            android:layout_toEndOf="@+id/ic_phone" />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/e_mail"
            android:layout_below="@+id/ic_phone"
            android:id="@+id/ic_email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email_register"
            android:layout_marginRight="5dp"
            android:layout_alignTop="@+id/ic_email"
            android:layout_toRightOf="@+id/ic_email"
            android:layout_toEndOf="@+id/ic_email" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/showErr"
        android:textStyle="bold"
        android:layout_below="@+id/shape_2"
        android:textSize="20dp"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/showErr"
        android:background="@drawable/shape"
        android:textColor="@color/txt_color"
        android:text="@string/submit"
        android:maxLines="1"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:textSize="30dp"
        android:id="@+id/btnRegister"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />
</RelativeLayout>
</ScrollView>
