<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/shape_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <ImageView

            android:layout_marginBottom="8dp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_login"
            android:layout_gravity="center"
            android:id="@+id/ic_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Exchanging Contacts"
            android:layout_below="@+id/ic_login"
            android:textColor="@color/txt_color"
            android:textStyle="bold"
            android:textSize="25dp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_below="@+id/shape_1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/secound_backgroud"
        android:id="@+id/shape_2"
        >
        <ImageView
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/e_mail"
            android:id="@+id/ic_user"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ic_user"
            android:layout_toRightOf="@+id/ic_user"
            android:layout_toEndOf="@+id/ic_user"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/email"
            android:id="@+id/user_email123"
            />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_password_lock"
            android:layout_below="@+id/ic_user"
            android:id="@+id/ic_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userpass"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:lines="1"
            android:id="@+id/user_password123"
            android:inputType="textPassword"
            android:password="true"
            android:layout_alignTop="@+id/ic_password"
            android:layout_alignLeft="@+id/user_email123"
            android:layout_alignStart="@+id/user_email123" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remenber"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/RMCheck"
            android:layout_below="@+id/user_password123"
            android:layout_alignLeft="@+id/ic_password"
            android:layout_alignStart="@+id/ic_password" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/shape_2"
        android:background="@drawable/shape"
        android:textColor="@color/txt_color"
        android:text="@string/login"
        android:textSize="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:id="@+id/btnLogin"
        />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_below="@id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="33dp"
        android:textColor="@color/txt_color"
        android:id="@+id/changeRegister"
        />
    </RelativeLayout>
</ScrollView>
